syntax = "proto3";

package logcache.v1;

import "google/api/annotations.proto";
import "v2/envelope.proto";
import "egress.proto";

// The GroupReader service is used to read data from the LogCache system via
// groups of source IDs.
service GroupReader {
    rpc AddToGroup(AddToGroupRequest) returns (AddToGroupResponse) {
        option (google.api.http) = {
            put: "/v1/group/{name}/{source_id=**}"
        };
    }

    rpc Read(GroupReadRequest) returns (GroupReadResponse) {
        option (google.api.http) = {
            get: "/v1/group/{name}"
        };
    }

    rpc Group(GroupRequest) returns (GroupResponse) {
        option (google.api.http) = {
            get: "/v1/group/{name}/meta"
        };
    }
}

message AddToGroupRequest {
    string name = 1;
    string source_id = 2;
    bool local_only = 3;
}

message AddToGroupResponse {
}

message GroupReadRequest {
    string name = 1;
    uint64 requester_id = 2;

    int64 start_time = 3;
    int64 end_time = 4;
    int64 limit = 5;
    repeated EnvelopeType envelope_types = 6;
    bool local_only = 7;
}

message GroupReadResponse {
    loggregator.v2.EnvelopeBatch envelopes = 1;
}

message GroupRequest {
    string name = 1;
    bool local_only = 2;
}

message GroupResponse {
    repeated string source_ids = 1;
    repeated uint64 requester_ids = 2;
}

